# http-observatory-rust

./: Dockerfile  README.md  docker-compose.yml  test_api.ps1
cli/: CODE_OF_CONDUCT.md  Cargo.toml  README.md
cli/src/: lib.rs  main.rs  models.rs
cli/src/analyzer/: content.rs  cors.rs  headers.rs  hsts_preload.rs  misc.rs  mod.rs  tls.rs
cli/src/grader/: mod.rs
cli/src/reporting/: mod.rs
cli/src/scanner/: active.rs  engine.rs  mod.rs
rust-app/: Cargo.toml  Dockerfile
rust-app/src/: main.rs  utils.rs
rust-app/src/api/: handlers.rs
rust-app/src/db/: mod.rs  models.rs  repo.rs
rust-app/src/scanner/: engine.rs  error.rs  grade.rs  grader_tests.rs  hsts_preload.rs  mod.rs
rust-app/src/scanner/analyzer/: broken_components.rs  cloudflare.rs  content.rs  cors.rs  headers.rs  headers_tests.rs  misc.rs  mod.rs  secrets.rs  supabase.rs  vibe_coding.rs
