[package]
name = "httpobs-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
strum = { version = "0.25", features = ["derive"] }
scraper = "0.17"
url = "2.4"
clap = { version = "4.4", features = ["derive"] }
native-tls = "0.2"
